overflow fixes

--- a/src/sass/scenes/_scenes.scss
+++ b/src/sass/scenes/_scenes.scss
@@ -9,6 +9,10 @@
     }
 }
 
+.scene-content {
+    overflow-x: hidden;
+}
+
 .scene-copy {
     @extend .clearfix;
     max-width: rem(370);
